# interviewpreparation

./: .gitignore  README.md  a.txt
DevOps/: Readme.md  RoadMaps.md
DevOps/Scenario/: fast_api_using_docker_compose.md
DevOps/ServerlessAWSInstanceScheduler/: Readme.md  app.py  lambda_function.py
DevOps/Stage-1-Fundamental-CICD-basics/: 1_git-git-workflow.md  2_CICD_basics  3_docker _and_containarization.md  4_terraform.md  7_cicd_pipeline_github_action.md  terraform_setup_by_cloud.md
DevOps/Stage-2-AWS-Services/: AWSCompute&StorageBasics.md  DynamoDB.md  S3.md  rds.md
DevOps/YAML/: 1_yaml_basic.md  2_yaml_intermediate.md  3_docker_related_yaml.md  4_azure_pipeline.md  5_aws_pipeline.md  6_kebernetics.md
DevOps/fastapicicd/: Dockerfile  celery.md  docker-compose.yml  entrypoint.sh  requiremetns.txt
LLM/: PHASES.md  README.md  week1-notes.md
LLM/phase1/projects/basic-llm-fastapi-app/: README.md  pyproject.toml  run.md
LLM/phase1/projects/basic-llm-fastapi-app/app/: main.py
LLM/phase1/projects/career-roadmap-api/: README.md  pyproject.toml  run.md
LLM/phase1/projects/career-roadmap-api/app/: main.py  openai_client.py  schemas.py
OCR-Text-Extraction/: README.md
OCR-Text-Extraction/app/: README.md
OCR-Text-Extraction/docs/: INTERVIEW-QA.md  STEP-1-NOTES.md  STUDY-ARCHITECTURE.md
PythonRevise/: BCG_Preparation.md
PythonRevise/easy/: day1_reverse_max_prime.md  day2_anagrams_pairs_nonrepeating.md  day3_reverse_merge_subarray.md
PythonRevise/medium/: day1_stairs_paths_minpath.md  day3_merge_rotate_peak.md  (+7 more)
SexyProgramming/: bouncing_ball.py
(+57 files in other folders)
