[project]
name = "basic-llm-fastapi-app"
version = "0.1.0"
description = "Phase 1 starter app for learning LLM application development with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "openai",
    "pydantic",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
