[project]
name = "career-roadmap-api"
version = "0.1.0"
description = "Phase 1 project for learning structured LLM backend patterns with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "openai",
    "pydantic",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
